# muclass

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: allocator.c.70F3BEB15E00BC68.idx  allocator.c.7D64FD2E621867C4.idx  allocator.h.98FB4E99017AB5C6.idx  allocator.h.D51725EA512A73AA.idx  allocator_private.h.968CCBB2737C2862.idx  allocator_private.h.CCA2BC57438C690F.idx  circle.c.75041803D0D6D486.idx  circle.h.BBFAD9D78D7AA1A9.idx  circle_private.h.CAEADF416FF625CE.idx  class.c.777F193969564BB8.idx  class.c.8B4F0703DC123063.idx  class.c.9EE56CABBAD14C78.idx  class.h.14FA78D0A4ACB977.idx  class.h.5D355F7ACA52EB95.idx  class.h.EC15D0806DC06A56.idx  class_private.h.12DA97F0F262E424.idx  class_private.h.1605DFB378CE0D5B.idx  class_private.h.9FC8A67DD98DC26C.idx  heap_allocator.c.1E79DB9D099F27F3.idx  heap_allocator.c.8F2A196F9FE2B718.idx  heap_allocator.h.B7BE02A59B156747.idx  heap_allocator.h.F6F91FD81203C508.idx  heap_allocator_sigleton.h.9548D44550836259.idx  heap_allocator_sigleton.h.9925D589B35BC375.idx  main.c.5F990E2CB1CFC8E0.idx  main.c.7E5FF6916A51CA32.idx  oop_mumacros.h.669F2D6EF37C53C8.idx  person.c.123A6D5A75FB418C.idx  person.c.935ACF91168A74CC.idx  person.h.65CA75389799D39C.idx  person.h.A397A6CCC2375341.idx  person_private.h.07220AE4FA702333.idx  person_private.h.98C11F13CF03C776.idx  point.c.96D67F10CFEB1819.idx  point.c.A4B7836134E1095D.idx  point.h.65F4790BEB7200D8.idx  point.h.F1F6DA1B6F6560B5.idx  point_private.h.7FE829F562BC6381.idx  point_private.h.CFF749D50BFEA3D2.idx  print_trait.c.004497EC2ABB03CA.idx  (+11 more)
include/mu_class/: class.h  class_private.h  oop_mumacros.h
scripts/: make_class.sh  make_header.sh  make_private_header.sh  make_source.sh
scripts/templates/: header_template.txt  private_header_template.txt  source_template.txt
src/: class.c
test/: CMakeLists.txt  main.c
test/.cache/clangd/index/: main.c.2AEB81B565688754.idx  point.c.EA4F36C03684EF71.idx  point.h.09ABA0759165E430.idx  point_private.h.A22AAAD718906B45.idx
test/circle/: CMakeLists.txt
test/circle/include/mu_circle/: circle.h
test/circle/src/: circle.c  circle_private.h
test/person/: CMakeLists.txt
test/person/include/person/: person.h  person_private.h
test/person/src/: person.c
test/point/: CMakeLists.txt
test/point/include/point/: point.h  point_private.h
test/point/src/: point.c
